syntax = "proto3";

import "UserDataProto.proto";

message CommunityUserProtoMessage {
    string userTelegramLogin = 1;
    UserDataProtoMessage data = 2;
}
